# klak

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  Klak%20Plan%201.2.md  MANUAL_QA.md  MEMORY_MODEL.md  ROADMAP.md  SECURITY_MODEL.md  VOICE_ACTION_CATALOG.md
sidecar/: requirements-wakeword.txt  wake_listener.py
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  GlobalVoiceController.tsx  GlobalVoiceOverlay.tsx  GlowOverlay.tsx  VoiceCaptionOverlay.tsx
src/components/: ActionPreviewCard.tsx  OperatorTaskPanel.tsx  RealtimeVoicePanel.tsx  ScreenHeader.tsx  VoiceRecorder.tsx
src/features/apps/: AppsScreen.tsx
src/features/chat/: AssistantScreen.tsx
src/features/commands/: CommandsScreen.tsx
src/features/diagnostics/: DiagnosticsScreen.tsx
src/features/logs/: LogsScreen.tsx
src/features/memory/: MemoryScreen.tsx
src/features/processes/: ProcessesScreen.tsx
src/features/projects/: ProjectsScreen.tsx
src/features/settings/: SettingsScreen.tsx
src/features/setup/: SetupFlow.tsx
src/features/tools/: ToolsScreen.tsx
src/features/workflows/: WorkflowsScreen.tsx
src/lib/: utils.ts
src/lib/actions/: klakActionDispatcher.ts
src/types/: index.ts
tests/: appActionResolver.test.mjs  realtimeTurnOwnership.test.mjs  voiceApprovalMatcher.test.mjs
tests-dist/: appActionResolver.mjs  realtimeTurnOwnership.mjs  voiceApprovalMatcher.mjs
(+41 files in other folders)
