[package]
name = "klak"
version = "0.1.0"
description = "Klak - your local AI operator."
authors = ["Klak"]
edition = "2021"

[lib]
name = "klak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native"] }
arboard = "3"
wait-timeout = "0.2"
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
systemicons = "0.9.13"
winreg = "0.55"
